# Stadsspel

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  CONTEXT.md  DEPLOY.md  README.md  START_INSTRUCTIES.md  brussel-gebieden.geojson  docker-compose.prod.yml  prod_check.ps1  pyproject.toml  start.ps1  stop.ps1  update_hold_points.sql  update_lissabon_challenges.sql
backend/: Dockerfile  debug_team.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_game_sessions.py  003_remove_game_id_from_submission.py  004_drop_games_table.py  005_fix_team_name_uniqueness.py  006_points_system.py  007_add_session_paused_at.py  008_tikker_and_score.py  009_team_locations.py  010_proximity.py
backend/app/: main.py
backend/app/api/: admin.py  areas.py  auth.py  game.py  (+8 more)
deploy/: Caddyfile  start-backend.sh
docs/adr/: 0001-brussel-kleiner-speelgebied.md  0002-nabijheidseis-voor-opdrachten.md  0003-kahoot-stijl-join-flow.md  0004-capacitor-als-native-wrapper.md  0005-capacitor-remote-load.md
frontend/: admin.html  api-test.html  debug.html  index.html  join.html  manifest.json  service-worker.js  session-manager.html
frontend-react/: Dockerfile  capacitor.config.ts  package-lock.json  package.json  vite.config.ts
frontend-react/public/: sw.js
frontend-react/src/: App.css  App.tsx  index.css  leaderboard.css  main.tsx
frontend/css/: styles.css
frontend/js/: admin.js  api.js  auth.js  join.js  leaderboard.js  map.js  offline_queue.js  session-manager.js  timer.js
infra/: README_infra.md  docker-compose.yml
(+35 files in other folders)
